--- a/src/components/SignupForm/signup.css
+++ b/src/components/SignupForm/signup.css
@@ -3,6 +3,8 @@ label {
   color: rgb(220, 217, 217);
 }
 
+
+
 .acc {
   font-size: 37px;
 }
@@ -33,6 +35,7 @@ label {
   flex-direction: column;
   width: 100%;
   align-items: flex-start;
+  align-items: center;
   
 }
 
@@ -41,6 +44,7 @@ label {
   margin: 14px 0px 32px 0px;
   font-weight: 600;
   font-size: 25px;
+  text-align: center;
 }
 
 .form-container {
