--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -22,7 +22,8 @@ nav {
 
 
 .navigation-bar img {
-  height: 40px;
+  height: 45px;
+  width: 100px;
 }
 
 
@@ -31,6 +32,7 @@ img {
   position: absolute;
   top: 0px;
   left: 0px;
+
 }
 
 img:hover {
