--- a/src/components/Games/DisplayInfo.css
+++ b/src/components/Games/DisplayInfo.css
@@ -1,6 +1,17 @@
-img{
-  width: 100px;
-  height: 100px;
+body{
+  width: 100%;
+  height: 100%;
+}
+
+#bg-image{
+  /* width: 480px;
+  height: 300px; */
+  width: 40vh;
+  
+  margin: auto;
+  border: 1px solid red;
+  justify-content: center;
+  text-align: center;
 }
 
 .game-detail{
@@ -9,4 +20,6 @@ img{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
 
