--- a/src/components/Games/DisplayInfo.css
+++ b/src/components/Games/DisplayInfo.css
@@ -3,13 +3,11 @@ body{
   height: 100%;
 }
 
-#bg-image{
-  /* width: 480px;
-  height: 300px; */
-  width: 40vh;
+.bg-image{
+  width: 480px;
+  height: 300px; 
   
   margin: auto;
-  border: 1px solid red;
   justify-content: center;
   text-align: center;
 }
