--- a/src/components/Games/DisplayInfo.css
+++ b/src/components/Games/DisplayInfo.css
@@ -3,15 +3,6 @@ body{
   height: 100%;
 }
 
-.bg-image{
-  width: 480px;
-  height: 300px; 
-  
-  margin: auto;
-  justify-content: center;
-  text-align: center;
-}
-
 .game-detail{
   margin: 0;
   font-family: 'Quicksand', sans-serif;
@@ -20,17 +11,40 @@ body{
 
   display: flex;
   padding: 10px;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   color: white;
+  text-align: justify;
 }
 
 
 .right-column{
-  padding: 10px;
-  border: 2px solid red;
+  padding: 10px 50px 0px 0px;
+  /* border: 2px solid red; */
+  width: 60%;
 }
 
 .left-column{
   padding: 10px;
-  border: 2 px solid green
+  /* border: 2px solid green; */
+  width: 40%;
+  display: flex;
+  justify-content: center;
+}
+
+.image-container{
+  width: 400px;
+  /* border: 1px solid brown; */
+  overflow: hidden;
+  height: 600px;
+  border: 1px solid rgb(190, 190, 190);
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 5px 15px 0px #000000; 
+  box-shadow: 0px 5px 15px 0px #000000;
+}
+
+.image-container img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
 }
