--- a/src/components/Games/DisplayInfo.css
+++ b/src/components/Games/DisplayInfo.css
@@ -48,3 +48,9 @@ body{
   object-fit: cover;
   border-radius: 5px;
 }
+
+.title{
+  font-family: 'Lora', serif;
+  font-weight: bolder;
+  font-size: x-large;
+}
