add adobe fonts import

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -11,8 +11,8 @@ nav {
   align-items: center;
   justify-content: right;
   padding: 0px 15px 0px 15px;
-  font-weight: 600;
-
+  font-weight: 700;
+  font-size: 14px;
 }
 
 .navigation-bar {
