--- a/src/components/Games/DisplayInfo.css
+++ b/src/components/Games/DisplayInfo.css
@@ -11,21 +11,21 @@ body{
 
   display: flex;
   padding: 10px;
-  /* border: 2px solid blue; */
-  color: white;
+  border: 2px solid blue;
+  color: rgb(190, 190, 190);
   text-align: justify;
 }
 
 
 .right-column{
   padding: 10px 50px 0px 0px;
-  /* border: 2px solid red; */
+  border: 2px solid red;
   width: 60%;
 }
 
 .left-column{
   padding: 10px;
-  /* border: 2px solid green; */
+  border: 2px solid green;
   width: 40%;
   display: flex;
   justify-content: center;
@@ -53,4 +53,9 @@ body{
   font-family: 'Lora', serif;
   font-weight: bolder;
   font-size: x-large;
+  color: whitesmoke;
+}
+
+.description{
+  
 }
