--- a/src/components/Games/DisplayInfo.css
+++ b/src/components/Games/DisplayInfo.css
@@ -1,6 +1,9 @@
 body{
   width: 100%;
   height: 100%;
+  font-family: canada-type-gibson,sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
 
 .game-detail{
@@ -57,5 +60,5 @@ body{
 }
 
 .description{
-  
+
 }
