--- a/src/components/Games/DisplayInfo.css
+++ b/src/components/Games/DisplayInfo.css
@@ -8,9 +8,9 @@ body{
 
 .game-detail{
   margin: 0;
-  font-family: 'Quicksand', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* font-family: 'Quicksand', sans-serif; */
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
 
   display: flex;
   padding: 10px;
@@ -50,15 +50,22 @@ body{
   height: 100%;
   object-fit: cover;
   border-radius: 5px;
+  /* transition: transform 600ms; */
 }
-
+/* .image-container img:hover{
+  transform: scale(.95);
+} */
 .title{
-  font-family: 'Lora', serif;
-  font-weight: bolder;
+  /* font-family: 'Lora', serif; */
   font-size: x-large;
   color: whitesmoke;
+  font-family: plantin,sans-serif;
+  font-weight: 600;
+  font-style: normal;
 }
 
 .description{
-
+  font-family: neue-haas-unica, sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
