--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -11,7 +11,9 @@ nav {
   align-items: center;
   justify-content: right;
   padding: 0px 15px 0px 15px;
-  font-weight: 700;
+  font-family: neue-haas-unica, sans-serif;
+  font-weight: 900;
+  font-style: normal;
   font-size: 14px;
 }
 
