--- a/src/components/Kerasel/kerasel.css
+++ b/src/components/Kerasel/kerasel.css
@@ -2,6 +2,17 @@
 
 .gameCard{
   height: 125px;
-  
+  transition: transform 600ms;
 }
 
+.gameCard img:hover{
+  transform: scale(1.3);
+}
+
+
+
+/* transition: transform 600ms; 
+}
+.image-container img:hover{
+  transform: scale(.95);
+} */
