--- a/src/components/Kerasel/kerasel.css
+++ b/src/components/Kerasel/kerasel.css
@@ -1,18 +1,13 @@
 
 
 .gameCard{
-  height: 125px;
+  width: 230px;
+  height: 129px;
   transition: transform 600ms;
 }
 
 .gameCard img:hover{
-  transform: scale(1.3);
+  transform: scale(1.2);
 }
 
 
-
-/* transition: transform 600ms; 
-}
-.image-container img:hover{
-  transform: scale(.95);
-} */
