--- a/src/components/Games/DisplayInfo.css
+++ b/src/components/Games/DisplayInfo.css
@@ -14,7 +14,7 @@ body{
 
   display: flex;
   padding: 10px;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   color: rgb(190, 190, 190);
   text-align: justify;
 }
@@ -22,13 +22,13 @@ body{
 
 .right-column{
   padding: 10px 50px 0px 0px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   width: 60%;
 }
 
 .left-column{
   padding: 10px;
-  border: 2px solid green;
+  /* border: 2px solid green; */
   width: 40%;
   display: flex;
   align-items: center;
@@ -40,7 +40,7 @@ body{
   /* border: 1px solid brown; */
   overflow: hidden;
   height: 340px;
-  border: 1px solid rgb(190, 190, 190);
+  /* border: 1px solid rgb(190, 190, 190); */
   border-radius: 5px;
   -webkit-box-shadow: 0px 5px 15px 0px #000000; 
   box-shadow: 0px 5px 15px 0px #000000;
@@ -77,7 +77,7 @@ body{
 .banner-image{
   display: flex;
   justify-content: center;
-  border: 2px solid pink;
+  /* border: 2px solid pink; */
   box-shadow: inset 0 0 10px 10px black;
 }
 
@@ -94,4 +94,10 @@ body{
 .header{
   display: flex;
   align-items: center;
+  font-size: 17px;
+}
+
+.details{
+  font-size: 12px;
+  font-weight: bold;
 }
