--- a/src/pages/Landing/GameSearch.css
+++ b/src/pages/Landing/GameSearch.css
@@ -1,8 +1,29 @@
-.games-dropdown {
-  display: flex;
-  justify-content: end;
+
+img {
+  width: 300px;
+  height: 225px;
+
+}
+
+.wrapper {
+  margin: 10px;
+
+}
+
+.page-container {
   margin-top: 30px;
-  margin-right: 15px;
-  
+}
+
+
+.games {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.games-dropdown {
+  display: inline-block;
+  position: relative;
 
 }
