--- a/src/pages/Landing/GameSearch.css
+++ b/src/pages/Landing/GameSearch.css
@@ -1,9 +1,14 @@
 
 img {
-  width: 400px;
+  width: 330px;
   height: 225px;
   border-radius: 2%;
+  object-fit: cover;
+  transition: transform 500ms;
+}
 
+.game-image:hover{
+  transform: scale(1.1);
 }
 
 .wrapper {
@@ -13,6 +18,9 @@ img {
 
 .page-container {
   margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 
@@ -30,11 +38,14 @@ img {
 
 .drop-down {
   margin: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 select {
   border: 2px solid rgb(53, 50, 50);
   border-radius: 3%;
   background-color: rgb(27, 25, 25);
-  color: linear-gradient(315deg, #400468 10%, #79060d 90%);
+  width: 250px;
 }
