--- a/src/components/Games/DisplayInfo.css
+++ b/src/components/Games/DisplayInfo.css
@@ -52,12 +52,12 @@ body{
   height: 100%;
   object-fit: cover;
   border-radius: 5px;
-  transition: transform 600ms;
+  transition: transform 550ms;
 }
 
-.image-container img:hover{
-  transform: scale(.95);
-}
+/* .image-container img:hover{
+  transform: scale(.87);
+} */
 
 .title{
   /* font-family: 'Lora', serif; */
@@ -80,7 +80,7 @@ body{
   justify-content: center;
   box-shadow: inset 0 0 10px 10px black;
   position: relative;
-  height: 420px;
+  height: 430px;
   overflow: hidden;
 }
 
