--- a/src/components/Kerasel/kerasel.css
+++ b/src/components/Kerasel/kerasel.css
@@ -1,9 +1,21 @@
 
-
 .gameCard{
-  width: 230px;
-  height: 129px;
-  transition: transform 600ms;
+  width: 330px;
+  height: 200px;
+  /* transition: transform 600ms; */
+  width: 97%;
+  border: 1px solid rgb(190, 190, 190);
+  overflow: hidden;
+  border-radius: 5px;
+
+}
+
+.gameCard img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition:transform 600ms;
+  position: relative;
 }
 
 .gameCard img:hover{
