combine signup css files in styles

--- a/src/components/SignupForm/signup.css
+++ b/src/components/SignupForm/signup.css
@@ -103,3 +103,9 @@ label {
   align-items: flex-start;
   margin-bottom: 16px;
 }
+
+.container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
