--- a/src/styles/DisplayInfo.css
+++ b/src/styles/DisplayInfo.css
@@ -14,7 +14,7 @@ body{
 
   display: flex;
   padding: 10px;
-  /* border: 2px solid blue; */
+  border: 2px solid blue;
   color: rgb(190, 190, 190);
   text-align: justify;
   height: 100vh;
@@ -23,13 +23,13 @@ body{
 
 .right-column{
   padding: 10px 50px 0px 0px;
-  /* border: 2px solid red; */
+  border: 2px solid red;
   width: 60%;
 }
 
 .left-column{
   padding: 10px;
-  /* border: 2px solid green; */
+  border: 2px solid green;
   width: 40%;
   display: flex;
   align-items: center;
@@ -38,7 +38,7 @@ body{
 
 .image-container{
   width: 230px;
-  /* border: 1px solid brown; */
+  border: 1px solid brown;
   overflow: hidden;
   height: 340px;
   /* border: 1px solid rgb(190, 190, 190); */
@@ -76,12 +76,13 @@ body{
 }
 
 .banner-image{
-  display: inline-block;
+  /* display: inline-block; */
   justify-content: center;
   box-shadow: inset 0 0 10px 10px black;
-  position: relative;
   height: 430px;
+  position: relative;
   overflow: hidden;
+  
 }
 
 .banner-image > img {
@@ -101,6 +102,7 @@ body{
 #banner-image{
   width: 100%;
   object-fit: cover;
+  height: 430px;
 }
 
 
