--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -16,14 +16,14 @@
   padding: 5px 0px 0px 5px;
 }
 
-.question-container {
+.post-container {
   width: 100%;
   display: flex;
   align-items: flex-start;
   padding: 15px 0px 6px 13px;
 }
 
-.question-container p {
+.post-container p {
   width: 95%;
   margin: 0;
   text-align: left;
