--- a/src/styles/DisplayInfo.css
+++ b/src/styles/DisplayInfo.css
@@ -14,7 +14,7 @@ body{
 
   display: flex;
   padding: 10px;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   color: rgb(190, 190, 190);
   text-align: justify;
   height: 100vh;
@@ -23,13 +23,13 @@ body{
 
 .right-column{
   padding: 10px 50px 0px 0px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   width: 60%;
 }
 
 .left-column{
   padding: 10px;
-  border: 2px solid green;
+  /* border: 2px solid green; */
   width: 40%;
   display: flex;
   align-items: center;
@@ -38,10 +38,10 @@ body{
 
 .image-container{
   width: 230px;
-  border: 1px solid brown;
+  /* border: 1px solid brown; */
   overflow: hidden;
   height: 340px;
-  /* border: 1px solid rgb(190, 190, 190); */
+  border: 1px solid rgb(53, 50, 50);
   border-radius: 5px;
   -webkit-box-shadow: 0px 5px 15px 0px #000000; 
   box-shadow: 0px 5px 15px 0px #000000;
@@ -82,7 +82,7 @@ body{
   height: 430px;
   position: relative;
   overflow: hidden;
-  
+  object-fit: cover;
 }
 
 .banner-image > img {
