--- a/src/components/Games/DisplayInfo.css
+++ b/src/components/Games/DisplayInfo.css
@@ -41,7 +41,7 @@ body{
   /* border: 1px solid brown; */
   overflow: hidden;
   height: 340px;
-  /* border: 1px solid rgb(190, 190, 190); */
+  border: 1px solid rgb(53, 50, 50);
   border-radius: 5px;
   -webkit-box-shadow: 0px 5px 15px 0px #000000; 
   box-shadow: 0px 5px 15px 0px #000000;
@@ -76,12 +76,13 @@ body{
 }
 
 .banner-image{
-  display: inline-block;
+  /* display: inline-block; */
   justify-content: center;
   box-shadow: inset 0 0 10px 10px black;
-  position: relative;
   height: 430px;
+  position: relative;
   overflow: hidden;
+  object-fit: cover;
 }
 
 .banner-image > img {
@@ -101,6 +102,7 @@ body{
 #banner-image{
   width: 100%;
   object-fit: cover;
+  height: 430px;
 }
 
 
