--- a/src/styles/DisplayInfo.css
+++ b/src/styles/DisplayInfo.css
@@ -1,17 +1,12 @@
 body{
   width: 100%;
   height: 100%;
-  font-family: canada-type-gibson,sans-serif;
   font-weight: 700;
   font-style: normal;
 }
 
 .game-detail{
   margin: 0;
-  /* font-family: 'Quicksand', sans-serif; */
-  /* -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
-
   display: flex;
   padding: 10px;
   /* border: 2px solid blue; */
@@ -55,9 +50,6 @@ body{
   transition: transform 550ms;
 }
 
-/* .image-container img:hover{
-  transform: scale(.87);
-} */
 
 .title{
   /* font-family: 'Lora', serif; */
@@ -76,13 +68,12 @@ body{
 }
 
 .banner-image{
-  /* display: inline-block; */
   justify-content: center;
   box-shadow: inset 0 0 10px 10px black;
   height: 430px;
   position: relative;
   overflow: hidden;
-  object-fit: cover;
+
 }
 
 .banner-image > img {
@@ -101,8 +92,10 @@ body{
 
 #banner-image{
   width: 100%;
+  /* object-fit: cover; */
+  height: 100%;
   object-fit: cover;
-  height: 430px;
+  object-position: top;
 }
 
 
@@ -141,4 +134,10 @@ body{
   font-size: 12px;
   font-weight: bold;
   margin-top: 10px;
+}
+
+.collection-buttons{
+  display: flex;
+  height: 100px;
+  width: 134;
 }
