--- a/src/styles/DisplayInfo.css
+++ b/src/styles/DisplayInfo.css
@@ -58,6 +58,7 @@ body{
   font-family: plantin,sans-serif;
   font-weight: 700;
   font-style: bolder;
+  
 }
 
 .description{
@@ -128,6 +129,7 @@ body{
   display: flex;
   align-items: center;
   font-size: 17px;
+  justify-content: space-between;
 }
 
 .details{
@@ -136,8 +138,22 @@ body{
   margin-top: 10px;
 }
 
+.collection-buttons{
+
+}
+
 .collection-buttons img{
   display: flex;
   height: 20px;
   width: 30px;
+  
+}
+
+.collection-buttons button{
+  background: rgb(53, 50, 50);
+  border: 0;
+  margin: 0 5px 0 5px;
+  box-shadow: 0px 5px 15px 0px #000000;
+  border-radius: 5px;
+
 }
