--- a/src/styles/GameSearch.css
+++ b/src/styles/GameSearch.css
@@ -53,4 +53,9 @@ select {
   background-color: rgb(27, 25, 25);
   width: 200px;
 }
+
+/* .game-card{
+  box-shadow: 0px 5px 15px 0px #000000;
+
+} */
 /* -------------- */
