--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -4,6 +4,36 @@
   flex-direction: column;
 }
 
+.banner-img {
+  width: 200px;
+  height: 120px;
+  object-fit: cover;
+}
+
+.welcometo {
+  font-size: 75px;
+  color:rgb(190, 190, 190);
+}
+
+.welcome {
+  text-align: center;
+  align-items: center;
+  align-self: flex-end;
+  display: flex;
+  justify-content: center;
+}
+
+.subtitle {
+  text-align: center;
+  color:rgb(190, 190, 190);
+  font-size: 20px;
+  margin-bottom: 40px;
+}
+
+.placefor {
+  font-size: 24px;
+}
+
 .genre-Title {
   color:rgb(190, 190, 190);
   margin-top: 20px;
@@ -13,9 +43,45 @@
 .poststitle {
   color:rgb(190, 190, 190);
   margin-top: 75px ;
+  text-align: center;
+  font-size: 42px;
+  font-weight: bold;
 }
 
 .main-content {
-  margin-top: 150px;
+  margin-top: 75px;
+}
+
+.subtitle-banner {
+  font-size: 30px;
+  color:rgb(190, 190, 190);
+  text-align: center;
+}
+
+.textarea {
+  width: 450px;
+  height: 100px;
+}
+
+.postarea {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+
+.post-card {
+  width: 50%;
+  text-align: center;
+  margin: auto;
+}
+
+.usertext {
+  font-size: 25px;
+}
+
+.postbutton {
+  margin-top: 15px;
 }
 
