--- a/src/styles/DisplayInfo.css
+++ b/src/styles/DisplayInfo.css
@@ -52,17 +52,15 @@ body{
 
 
 .title{
-  /* font-family: 'Lora', serif; */
   font-size: 32px;
   color: whitesmoke;
   font-family: plantin,sans-serif;
   font-weight: 700;
   font-style: bolder;
-  
 }
 
 .description{
-  font-family: neue-haas-unica, sans-serif;
+  font-family: quicksand, sans-serif;
   font-weight: 900;
   font-style: normal;
   font-size: 16px;
@@ -101,7 +99,7 @@ body{
 
 
 .display-info{
-  font-family: neue-haas-unica, sans-serif;
+  font-family: quicksand, sans-serif;
   margin: 0 !important;
 }
 
@@ -139,15 +137,16 @@ body{
   width: 228px;
 }
 
-.collection-buttons{
-  
+.collection-buttons {
+  /* right: 0;
+  position: absolute; */
 }
 
 .collection-buttons img{
   display: flex;
   height: 20px;
   width: 30px;
-  filter: invert(1)
+  filter: invert(1);
 }
 
 .collection-buttons button{
@@ -158,3 +157,13 @@ body{
   border-radius: 5px;
 
 }
+
+.review-header {
+  font-size: 26px;
+  color: whitesmoke;
+  font-family: plantin,sans-serif;
+  font-weight: 700;
+  font-style: bolder;
+  margin-top: 125px;
+}
+
