--- a/src/styles/DisplayInfo.css
+++ b/src/styles/DisplayInfo.css
@@ -167,3 +167,13 @@ body{
   margin-top: 125px;
 }
 
+.submit {
+  height: 40px;
+  width: 65px;
+  border-radius: 5px;
+  border: 1 px rgb(190, 190, 190);
+  background: rgb(53, 50, 50);
+  padding: inherit !important;
+  box-shadow: 0px 5px 15px 0px #000000;
+  margin-left: 28px;
+}
