--- a/src/styles/kerasel.css
+++ b/src/styles/kerasel.css
@@ -44,3 +44,11 @@
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 
 }
+
+.collect {
+  color:rgb(190, 190, 190);
+  margin-top: 20px;
+  font-size: 27px;
+  margin-left: 30px;
+  font-weight: 600;
+}
